- Code is heavily reorganized. - Now incorporating CodeLibrary project, need to turn it into a NuGet package. - Problem 9 stubbed, ready to start on it.

--- a/ProjectEuler/ProjectEuler.csproj
+++ b/ProjectEuler/ProjectEuler.csproj
@@ -6,4 +6,8 @@
     <NoWin32Manifest>true</NoWin32Manifest>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\..\..\source\CodeLibrary\CodeLibrary\CodeLibrary.csproj" />
+  </ItemGroup>
+
 </Project>
