--- a/PE_UnitTests/PE_UnitTests.csproj
+++ b/PE_UnitTests/PE_UnitTests.csproj
@@ -11,6 +11,7 @@
     <PackageReference Include="Moq" Version="4.10.0" />
     <PackageReference Include="MSTest.TestAdapter" Version="1.4.0" />
     <PackageReference Include="MSTest.TestFramework" Version="1.4.0" />
+    <PackageReference Include="onequbit.CodeLibrary" Version="1.0.0.1" />
   </ItemGroup>
 
   <ItemGroup>
