--- a/ProjectEuler/ProjectEuler.csproj
+++ b/ProjectEuler/ProjectEuler.csproj
@@ -7,7 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\..\..\source\CodeLibrary\CodeLibrary\CodeLibrary.csproj" />
+    <PackageReference Include="onequbit.CodeLibrary" Version="1.0.0.1" />
   </ItemGroup>
 
 </Project>
